--- a/templates/store/product_details.html
+++ b/templates/store/product_details.html
@@ -70,11 +70,18 @@
 	</div> <!-- row.// -->
 	<hr>
     {% if product.stock <= 0 %}
+
         <h5 class="text-danger">Out of Stock</h5>
+    {% else %}
+        {% if in_cart %}
+            <a href="" class="btn btn-success" style="pointer-events:none"> <span class="text">Added to Cart</span> <i class="fas fa-check"></i>  </a>
+            <a href="{% url 'cart' %}" class="btn btn-outline-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i>  </a>
         {% else %}
-	<a href="{% url 'add_cart' product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
-</article> <!-- product-info-aside .// -->
-            {% endif %}
+            <a href="{% url 'add_cart' product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+        {% endif %}
+        </article> <!-- product-info-aside .// -->
+    {% endif %}
+
 		</main> <!-- col.// -->
 	</div> <!-- row.// -->
 </div> <!-- card.// -->
