--- a/templates/store/product_details.html
+++ b/templates/store/product_details.html
@@ -18,6 +18,12 @@
 </article> <!-- gallery-wrap .end// -->
 		</aside>
 		<main class="col-md-6 border-left">
+
+
+{#        FORM#}
+            <form action="{% url 'add_cart' product.id %}" method="POST">
+            {% csrf_token %}
+
 <article class="content-body">
 
 <h2 class="title">{{ product.name }}</h2>
@@ -33,39 +39,23 @@
 	<div class="row">
 		<div class="item-option-select">
 			<h6>Choose Color</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Silver
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color" > Gray
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color checked"> Gold
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Black
-			  </label>
-			</div>
+			<select name="color" class="form-control" required>
+                <option value="" disabled selected>Select</option>
+                {% for i in product.variation_set.colors %}
+                <option value="{{ i.variation_value | lower }}">{{ i.variation_value }}</option>
+                {% endfor %}
+            </select>
 		</div>
 	</div> <!-- row.// -->
 	<div class="row">
 		<div class="item-option-select">
 			<h6>Select Size</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> S
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color" checked> M
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> L
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> XL
-			  </label>
-			</div>
+            <select name="size" class="form-control" required>
+                <option value="" disabled selected>Select</option>
+                {% for i in product.variation_set.sizes %}
+                <option value="{{ i.variation_value | lower}}">{{ i.variation_value | capfirst }}</option>
+                {% endfor %}
+            </select>
 		</div>
 	</div> <!-- row.// -->
 	<hr>
@@ -73,13 +63,16 @@
 
         <h5 class="text-danger">Out of Stock</h5>
     {% else %}
-        {% if in_cart %}
-            <a href="" class="btn btn-success" style="pointer-events:none"> <span class="text">Added to Cart</span> <i class="fas fa-check"></i>  </a>
-            <a href="{% url 'cart' %}" class="btn btn-outline-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i>  </a>
-        {% else %}
-            <a href="{% url 'add_cart' product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
-        {% endif %}
+{#        {% if in_cart %}#}
+{#            <a href="" class="btn btn-outline-success" style="pointer-events:none"> <span class="text">Added to Cart</span> <i class="fas fa-check"></i>  </a>#}
+{#            <a href="{% url 'cart' %}" class="btn btn-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i>  </a>#}
+{#        {% else %}#}
+            <button type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
+{#        {% endif %}#}
         </article> <!-- product-info-aside .// -->
+        </form>
+
+{#        FORM#}
     {% endif %}
 
 		</main> <!-- col.// -->
