--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -6,6 +6,14 @@
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
 
+{% if request.GET.command == 'verification' %}
+    <div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 1024px; margin-top:100px;">
+        We have sent you a verification link to <b>{{ request.GET.email }}</b>
+    <br><br>
+    Already verified? <a href="{% url 'login' %}">Login</a>
+    </div>
+{% else %}
+
 <!-- ============================ COMPONENT LOGIN   ================================= -->
 	<div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
       <div class="card-body">
@@ -33,6 +41,6 @@
 
      <p class="text-center mt-4">Don't have account? <a href="{% url 'register' %}">Sign up</a></p>
      <br><br>
-
+{% endif %}
 </section>
 {% endblock %}
