--- a/templates/accounts/reset_password.html
+++ b/templates/accounts/reset_password.html
@@ -7,22 +7,20 @@
 <section class="section-conten padding-y" style="min-height:84vh">
 
 <!-- ============================ COMPONENT LOGIN   ================================= -->
-	<div class="card mx-auto text-center" style="max-width: 520px; margin-top:100px;">
+	<div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
       <div class="card-body">
-      <h4 class="card-title mb-4">Forgot Password</h4>
+      <h4 class="card-title mb-4">Reset Password</h4>
                   {% include 'includes/alerts.html' %}
-      <form action="{% url 'forgot_password' %}" method="POST">
+      <form action="{% url 'reset_password' %}" method="POST">
           {% csrf_token %}
           <div class="form-group">
-			 <input type="email" class="form-control" placeholder="Email Address" name="email">
+			<input type="password" class="form-control" placeholder="New Password" name="password">
+          </div> <!-- form-group// -->        
+          <div class="form-group">
+			<input type="password" class="form-control" placeholder="Confirm Password" name="confirm_password">
           </div> <!-- form-group// -->
-
           <div class="form-group">
-              <a href="{% url 'login' %}" class="float-right"> Login</a>
-              <p class="float-right" style="margin-right: 10px">Got password?</p>
-          </div> <!-- form-group form-check .// -->
-          <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-block">Send Email</button>
+              <button type="submit" class="btn btn-primary btn-block">Reset Password</button>
           </div> <!-- form-group// -->
       </form>
       </div> <!-- card-body.// -->
