--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
 
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+    
+    <script src="https://www.paypal.com/sdk/js?client-id=AVbHWHTbQoy0BEU6IKgBkHpJpCGQ15KxL751Dn0W0NSO2q0e6Ltrs5SJXCkEcL_PYIpso81QWW8mrJpp&currency=USD"></script>
+
 
 <script type="text/javascript">
 /// some script
