--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,10 @@
 <!-- custom style -->
 <link href="{%  static 'css/ui.css' %}" rel="stylesheet" type="text/css"/>
 <link href="{%  static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
+    
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css"/>
+
 
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
