--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -110,7 +110,7 @@
                             </dl>
                             <hr>
                             <p class="text-center mb-3">
-                                <img src="{% static './images/misc/payments.png' %}" height="26">
+                                <img src="{% static '/images/misc/payments.png' %}" height="26">
                             </p>
                             <div id="paypal-button-container">
                                 <!--  Paypall Button -->
@@ -151,6 +151,7 @@ const csrftoken = getCookie('csrftoken');
         var url = "{% url 'payments' %}"
         var orderID = "{{ order.order_number }}"
         var payment_method = 'PayPal'
+        var redirect_url = "{% url 'order_complete' %}"
 
         // Render the PayPal button into #paypal-button-container
         paypal.Buttons({
@@ -186,11 +187,15 @@ const csrftoken = getCookie('csrftoken');
                                 status: details.status
                             })
                         })
-                            {#.then(response => response.json())#}
-                            {#.then(data => console.log(data))#}
+                        .then((response) => response.json())
+                        .then((data) => {
+                            console.log("Success, Transaction Completed: ");
+                            console.log(data);
+                            
+                            {#window.location.href = redirect_url + "?order_number={{ data.order_number }}&payment_id={{ data.transaction_id }}"#}
+                            window.location.href = redirect_url + '?order_number=' + data.order_number + '&payment_id=' + data.transaction_id
+                        })
                     }
-
-                    alert('Transactions completed by ' + details.payer.name.given_name)
                 })
             }
         }).render('#paypal-button-container');
