--- a/templates/store/product_details.html
+++ b/templates/store/product_details.html
@@ -3,118 +3,193 @@
 
 {% block content %}
 
-<section class="section-content padding-y bg">
-<div class="container">
+    <section class="section-content padding-y bg">
+        <div class="container">
 
-<!-- ============================ COMPONENT 1 ================================= -->
-<div class="card">
-	<div class="row no-gutters">
-		<aside class="col-md-6">
-<article class="gallery-wrap">
-	<div class="img-big-wrap">
-	   <a href="#"><img src="{{ product.images.url }}"></a>
-	</div> <!-- img-big-wrap.// -->
+            <!-- ============================ COMPONENT 1 ================================= -->
+            <div class="card">
+                <div class="row no-gutters">
+                    <aside class="col-md-6">
+                        <article class="gallery-wrap">
+                            <div class="img-big-wrap">
+                                <a href="#"><img src="{{ product.images.url }}"></a>
+                            </div> <!-- img-big-wrap.// -->
 
-</article> <!-- gallery-wrap .end// -->
-		</aside>
-		<main class="col-md-6 border-left">
-
-
-{#        FORM#}
-            <form action="{% url 'add_cart' product.id %}" method="POST">
-            {% csrf_token %}
-
-<article class="content-body">
-
-<h2 class="title">{{ product.name }}</h2>
-
-<div class="mb-3">
-	<var class="price h4">${{ product.price }}</var>
-</div>
-
-<p>{{ product.description }}</p>
+                        </article> <!-- gallery-wrap .end// -->
+                    </aside>
+                    <main class="col-md-6 border-left">
 
 
-<hr>
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Choose Color</h6>
-			<select name="color" class="form-control" required>
-                <option value="" disabled selected>Select</option>
-                {% for i in product.variation_set.colors %}
-                <option value="{{ i.variation_value | lower }}">{{ i.variation_value }}</option>
-                {% endfor %}
-            </select>
-		</div>
-	</div> <!-- row.// -->
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Select Size</h6>
-            <select name="size" class="form-control" required>
-                <option value="" disabled selected>Select</option>
-                {% for i in product.variation_set.sizes %}
-                <option value="{{ i.variation_value | lower}}">{{ i.variation_value | capfirst }}</option>
-                {% endfor %}
-            </select>
-		</div>
-	</div> <!-- row.// -->
-	<hr>
-    {% if product.stock <= 0 %}
+                        {#        FORM#}
+                        <form action="{% url 'add_cart' product.id %}" method="POST">
+                            {% csrf_token %}
 
-        <h5 class="text-danger">Out of Stock</h5>
-    {% else %}
-{#        {% if in_cart %}#}
-{#            <a href="" class="btn btn-outline-success" style="pointer-events:none"> <span class="text">Added to Cart</span> <i class="fas fa-check"></i>  </a>#}
-{#            <a href="{% url 'cart' %}" class="btn btn-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i>  </a>#}
-{#        {% else %}#}
-            <button type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
-{#        {% endif %}#}
-        </article> <!-- product-info-aside .// -->
-        </form>
+                            <article class="content-body">
 
-{#        FORM#}
-    {% endif %}
+                                <h2 class="title">{{ product.name }}</h2>
 
-		</main> <!-- col.// -->
-	</div> <!-- row.// -->
-</div> <!-- card.// -->
+                                <div class="mb-3">
+                                    <var class="price h4">${{ product.price }}</var>
+                                </div>
+
+                                <p>{{ product.description }}</p>
 
 
-<br>
+                                <hr>
+                                <div class="row">
+                                    <div class="item-option-select">
+                                        <h6>Choose Color</h6>
+                                        <select name="color" class="form-control" required>
+                                            <option value="" disabled selected>Select</option>
+                                            {% for i in product.variation_set.colors %}
+                                                <option value="{{ i.variation_value | lower }}">{{ i.variation_value }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                </div> <!-- row.// -->
+                                <div class="row">
+                                    <div class="item-option-select">
+                                        <h6>Select Size</h6>
+                                        <select name="size" class="form-control" required>
+                                            <option value="" disabled selected>Select</option>
+                                            {% for i in product.variation_set.sizes %}
+                                                <option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                </div> <!-- row.// -->
+                                <hr>
+                                {% if product.stock <= 0 %}
 
-<div class="row">
-			<div class="col-md-9">
+                                    <h5 class="text-danger">Out of Stock</h5>
+                                {% else %}
+                                    {#        {% if in_cart %}#}
+                                    {#            <a href="" class="btn btn-outline-success" style="pointer-events:none"> <span class="text">Added to Cart</span> <i class="fas fa-check"></i>  </a>#}
+                                    {#            <a href="{% url 'cart' %}" class="btn btn-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i>  </a>#}
+                                    {#        {% else %}#}
+                                    <button type="submit" class="btn  btn-primary"><span class="text">Add to cart</span>
+                                        <i class="fas fa-shopping-cart"></i></button>
+                                    {#        {% endif %}#}
+                                    </article> <!-- product-info-aside .// -->
+                                    </form>
 
-	<header class="section-heading">
-		<h3>Customer Reviews </h3>
+                                    {#        FORM#}
+                                {% endif %}
 
-	</header>
+                    </main> <!-- col.// -->
+                </div> <!-- row.// -->
+            </div> <!-- card.// -->
 
-	<article class="box mb-3">
-		<div class="icontext w-100">
-			<img src="{% static './images/avatars/avatar1.jpg' %}" class="img-xs icon rounded-circle">
-			<div class="text">
-				<span class="date text-muted float-md-right">24.04.2020 </span>
-				<h6 class="mb-1">Mike John </h6>
 
-			</div>
-		</div> <!-- icontext.// -->
-		<div class="mt-3">
-			<p>
-				Dummy comment Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip
-			</p>
-		</div>
-	</article>
+            <br>
+
+            <div class="row">
+                <div class="col-md-9">
 
 
 
-	</div> <!-- col.// -->
-</div> <!-- row.// -->
+                    <form action="{% url 'submit_review' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <h4>Write your review</h4>
+                        <div>
+                            {#                        Rating Stars#}
+                            <p>Rate this product:</p>
+
+                            <div class="rate">
+                                {#                                <input type="radio" name="rating" id="rating10" value="5" required><label for="rating10" title="5"></label>#}
+                                {#                                <input type="radio" name="rating" id="rating9" value="4.5" required><label for="rating9" title="4.5" class="half"></label>#}
+                                {#                                <input type="radio" name="rating" id="rating8" value="4" required><label for="rating8" title="4"></label>#}
+                                {#                                <input type="radio" name="rating" id="rating7" value="3.5" required><label for="rating7" title="3.5" class="half"></label>#}
+                                {#                                <input type="radio" name="rating" id="rating6" value="3" required><label for="rating6" title="3"></label>#}
+                                {#                                <input type="radio" name="rating" id="rating5" value="2.5" required><label for="rating5" title="2.5" class="half"></label>#}
+                                {#                                <input type="radio" name="rating" id="rating4" value="2" required><label for="rating4" title="2"></label>#}
+                                {#                                <input type="radio" name="rating" id="rating3" value="1.5" required><label for="rating3" title="1.5" class="half"></label>#}
+                                {#                                <input type="radio" name="rating" id="rating2" value="1" required><label for="rating2" title="1"></label>#}
+                                {#                                <input type="radio" name="rating" id="rating1" value="0.5" required><label for="rating1" title="0.5" class="half"></label>#}
+                                <input type="radio" id="rating10" name="rating" value="5"/><label for="rating10"
+                                                                                                   title="5 stars"></label>
+                                <input type="radio" id="rating9" name="rating" value="4.5"/><label class="half"
+                                                                                                 for="rating9"
+                                                                                                 title="4 1/2 stars"></label>
+                                <input type="radio" id="rating8" name="rating" value="4"/><label for="rating8"
+                                                                                                 title="4 stars"></label>
+                                <input type="radio" id="rating7" name="rating" value="3.5"/><label class="half"
+                                                                                                 for="rating7"
+                                                                                                 title="3 1/2 stars"></label>
+                                <input type="radio" id="rating6" name="rating" value="3"/><label for="rating6"
+                                                                                                 title="3 stars"></label>
+                                <input type="radio" id="rating5" name="rating" value="2.5"/><label class="half"
+                                                                                                 for="rating5"
+                                                                                                 title="2 1/2 stars"></label>
+                                <input type="radio" id="rating4" name="rating" value="2"/><label for="rating4"
+                                                                                                 title="2 stars"></label>
+                                <input type="radio" id="rating3" name="rating" value="1.5"/><label class="half"
+                                                                                                 for="rating3"
+                                                                                                 title="1 1/2 stars"></label>
+                                <input type="radio" id="rating2" name="rating" value="1"/><label for="rating2"
+                                                                                                 title="1 star"></label>
+                                <input type="radio" id="rating1" name="rating" value="0.5"/><label class="half"
+                                                                                                 for="rating1"
+                                                                                                 title="1/2 star"></label>
+
+                            </div>
+                            <br>
+                            Review Title:
+                            <input type="text" class="form-control" name="subject">
+                            <br>
+                            Review:
+                            <textarea name="review" id="review" rows="4" class="form-control"></textarea>
+                            <br>
+                            {% if user.is_authenticated %}
+                                {% if order_product %}
+                                    <button type="submit" class="btn  btn-primary"><span class="text">Submit Review</span>
+                                        <i class="fas fa-comment"></i></button>                                {% else %}
+                                <p>You can leave review only if you purchased this product.</p>
+                                {% endif %}
+                            {% else %}
+                            <p>Log in to post a review. <span><a href="{% url 'login' %}">Login now</a></span></p>
+                            {% endif %}
+                        </div>
+                        {% include 'includes/alerts.html' %}
+                    </form>
+                    <br>
+                    <header class="section-heading">
+                        <h3>Customer Reviews </h3>
+
+                    </header>
+
+                    {% for review in reviews %}
+                    <article class="box mb-3">
+                        <div class="icontext w-100">
+                            <img src="{% static './images/profile.jpg' %}" class="img-xs icon rounded-circle">
+                            <div class="text">
+                                <span class="date text-muted float-md-right">{{ review.created_at }}</span>
+                                <h6 class="mb-1">{{ review.user.full_name }}</h6>
+                                <div class="rating-stars">
+                                    <span>
+                                        <i class="fa fa-star{% if review.rating == 0.5 %}-half{% elif review.rating < 1 %}-o {% endif %}" aria-hidden="true"></i>
+                                        <i class="fa fa-star{% if review.rating == 1.5 %}-half{% elif review.rating < 2 %}-o {% endif %}" aria-hidden="true"></i>
+                                        <i class="fa fa-star{% if review.rating == 2.5 %}-half{% elif review.rating < 3 %}-o {% endif %}" aria-hidden="true"></i>
+                                        <i class="fa fa-star{% if review.rating == 3.5 %}-half{% elif review.rating < 4 %}-o {% endif %}" aria-hidden="true"></i>
+                                        <i class="fa fa-star{% if review.rating == 4.5 %}-half{% elif review.rating < 5 %}-o {% endif %}" aria-hidden="true"></i>
+                                    </span>
+                                </div>
+                            </div>
+                        </div> <!-- icontext.// -->
+                        <div class="mt-3">
+                            <h6>{{ review.subject }}</h6>
+                            <p>
+                                {{ review.review }}
+                            </p>
+                        </div>
+                    </article>
+                    {% endfor %}
+
+                </div> <!-- col.// -->
+            </div> <!-- row.// -->
 
 
-</div> <!-- container .//  -->
-</section>
-<!-- ========================= SECTION CONTENT END// ========================= -->
+        </div> <!-- container .//  -->
+    </section>
+    <!-- ========================= SECTION CONTENT END// ========================= -->
 {% endblock %}
