--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
     
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'css/image_gallery.css' %}" rel="stylesheet" type="text/css"/>
 
 
 <!-- custom javascript -->
