--- a/templates/store/product_details.html
+++ b/templates/store/product_details.html
@@ -11,11 +11,19 @@
                 <div class="row no-gutters">
                     <aside class="col-md-6">
                         <article class="gallery-wrap">
-                            <div class="img-big-wrap">
-                                <a href="#"><img src="{{ product.images.url }}"></a>
+                            <div class="img-big-wrap main-image">
+                                <center><img src="{{ product.images.url }}"></center>
                             </div> <!-- img-big-wrap.// -->
-
                         </article> <!-- gallery-wrap .end// -->
+                        <ul class="thumb">
+                            <li>
+                                <a href="{{ product.images.url }}" target="main-image"><img src="{{ product.images.url }}" alt="Product Image"></a>
+                                {% for i in product_gallery %}
+                                <a href="{{ i.images.url }}" target="main-image"><img src="{{ i.images.url }}" alt="Product Image"></a>
+                                {% endfor %}
+                            </li>
+                        </ul>
+
                     </aside>
                     <main class="col-md-6 border-left">
 
@@ -28,7 +36,7 @@
 
                                 <h2 class="title">{{ product.name }}</h2>
 
-                        <div class="rating-stars">
+                                <div class="rating-stars">
                                 <span>
                                     <i class="fa fa-star{% if product.average_rating < 0.5 %}-o{% elif review.rating >= 0.5 and product.average_rating < 1 %}-half {% endif %}"
                                        aria-hidden="true"></i>
@@ -41,11 +49,11 @@
                                     <i class="fa fa-star{% if product.average_rating < 4.5 %}-o{% elif review.rating >= 4.5 and product.average_rating < 5 %}-half {% endif %}"
                                        aria-hidden="true"></i>
                                 </span>
-                                                    <span>{{ product.average_rating }}</span>
+                                    <span>{{ product.average_rating }}</span>
 
-                            <span> - {{ product.count_ratings | add:0}} reviews</span>
-                        </div>
-                            
+                                    <span> - {{ product.count_ratings | add:0 }} reviews</span>
+                                </div>
+
                                 <div class="mb-3">
                                     <var class="price h4">${{ product.price }}</var>
                                 </div>
@@ -162,8 +170,8 @@
                     <br>
                     <header class="section-heading">
                         <h3>Customer Reviews </h3>
-{#                    <h6>Average Reviews</h6>#}
-{#                        <div class="rating-stars">#}
+                        {#                    <h6>Average Reviews</h6>#}
+                        {#                        <div class="rating-stars">#}
                         {#                                <span>#}
                         {#                                    <i class="fa fa-star{% if product.average_rating < 0.5 %}-o{% elif review.rating >= 0.5 and product.average_rating < 1 %}-half {% endif %}"#}
                         {#                                       aria-hidden="true"></i>#}
