--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,16 +10,15 @@
   <div class="collapse navbar-collapse" id="navbarTop4">
     <ul class="navbar-nav mr-auto">
     	<li class="nav-item dropdown">
-		 	<a href="#" class="nav-link">   English </a>
-
+		 	<a href="#" class="nav-link">English</a>
 		</li>
 		<li class="nav-item dropdown">
-			<a href="#" class="nav-link"> USD </a>
+			<a href="#" class="nav-link">Serbian</a>
 		</li>
     </ul>
     <ul class="navbar-nav">
-		<li><a href="#" class="nav-link"> <i class="fa fa-envelope"></i> Email </a></li>
-		<li><a href="#" class="nav-link"> <i class="fa fa-phone"></i> Call us </a></li>
+		<li><a href="#" class="nav-link"> <i class="fa fa-envelope"></i> markojovicic.rs@gmail.com </a></li>
+		<li><a href="#" class="nav-link"> <i class="fa fa-phone"></i> Portfolio </a></li>
 	</ul> <!-- list-inline //  -->
   </div> <!-- navbar-collapse .// -->
 </div> <!-- container //  -->
