--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 <div class="container">
 
 <div class="intro-banner-wrap">
-	<img src="{% static 'images/banners/cover.jpg' %}" class="img-fluid rounded">
+	<img src="{% static 'images/banners/cover.jpg' %}" alt="Cover" class="img-fluid rounded">
 </div>
 
 </div> <!-- container //  -->
@@ -31,7 +31,7 @@
     {% for product in products %}
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="{{ product.get_url }}" class="img-wrap"> <img src="{{ product.images.url }}"> </a>
+			<a href="{{ product.get_url }}" class="img-wrap"> <img src="{{ product.images.url }}" alt="Product Image"> </a>
 			<figcaption class="info-wrap">
 				<a href="{{ product.get_url }}" class="title">{{ product.name }}</a>
 				<div class="price mt-1">{{ product.price }}</div> <!-- price-wrap.// -->
