--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -138,7 +138,7 @@
 		<figure class="card card-product-grid">
 			<div class="img-wrap">
 
-				<a href="{{ product.get_url }}"><img src="{{ product.images.url }}"></a>
+				<a href="{{ product.get_url }}"><img src="{{ product.images.url }}" alt="Product Image"></a>
 
 
 			</div> <!-- img-wrap.// -->
