--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -33,7 +33,7 @@
 <tr>
 	<td>
 		<figure class="itemside align-items-center">
-			<div class="aside"><img src="{{ cart_item.product.images.url }}" class="img-sm"></div>
+			<div class="aside"><img src="{{ cart_item.product.images.url }}" alt="Cart Item Product Image" class="img-sm"></div>
 			<figcaption class="info">
 				<a href="{{ cart_item.product.get_url }}" class="title link-primary">{{ cart_item.product.name }}</a>
 				<p class="text-muted small">
@@ -103,7 +103,7 @@
 			</dl>
 			<hr>
 			<p class="text-center mb-3">
-				<img src="{% static './images/misc/payments.png' %}" height="26">
+				<img src="{% static './images/misc/payments.png' %}" alt="Payments" height="26">
 			</p>
 			<a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Checkout </a>
 			<a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
