--- a/templates/home.html
+++ b/templates/home.html
@@ -38,15 +38,15 @@
                 {% if product.average_rating > 0 %}
                 <div class="rating-stars">
                 <span>
-                    <i class="fa fa-star{% if product.average_rating < 0.5 %}-o{% elif review.rating >= 0.5 and product.average_rating < 1 %}-half {% endif %}"
+                    <i class="fa fa-star{% if product.average_rating < 0.5 %}-o{% elif product.average_rating >= 0.5 and product.average_rating < 1 %}-half {% endif %}"
                        aria-hidden="true"></i>
-                    <i class="fa fa-star{% if product.average_rating < 1.5 %}-o{% elif review.rating >= 1.5 and product.average_rating < 2 %}-half {% endif %}"
+                    <i class="fa fa-star{% if product.average_rating < 1.5 %}-o{% elif product.average_rating >= 1.5 and product.average_rating < 2 %}-half {% endif %}"
                        aria-hidden="true"></i>
-                    <i class="fa fa-star{% if product.average_rating < 2.5 %}-o{% elif review.rating >= 2.5 and product.average_rating < 3 %}-half {% endif %}"
+                    <i class="fa fa-star{% if product.average_rating < 2.5 %}-o{% elif product.average_rating >= 2.5 and product.average_rating < 3 %}-half {% endif %}"
                        aria-hidden="true"></i>
-                    <i class="fa fa-star{% if product.average_rating < 3.5 %}-o{% elif review.rating >= 3.5 and product.average_rating < 4 %}-half {% endif %}"
+                    <i class="fa fa-star{% if product.average_rating < 3.5 %}-o{% elif product.average_rating >= 3.5 and product.average_rating < 4 %}-half {% endif %}"
                        aria-hidden="true"></i>
-                    <i class="fa fa-star{% if product.average_rating < 4.5 %}-o{% elif review.rating >= 4.5 and product.average_rating < 5 %}-half {% endif %}"
+                    <i class="fa fa-star{% if product.average_rating < 4.5 %}-o{% elif product.average_rating >= 4.5 and product.average_rating < 5 %}-half {% endif %}"
                        aria-hidden="true"></i>
                 </span>
                     <span>{{ product.average_rating }}</span>
