--- a/templates/accounts/account_verification_email.html
+++ b/templates/accounts/account_verification_email.html
@@ -5,6 +5,7 @@
     Please click on the link below to confirm your registration.
     http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
     
-    If you think it's not you, ingore this email.
+    If you think it's not you, ignore this email.
 
 {% endautoescape %}
+
