--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 <div class="container">
 
 <div class="intro-banner-wrap">
-	<img src="{% static 'images/banners/cover.jpg' %}" alt="Cover" class="img-fluid rounded">
+	<img src="{% static 'images/banners/cover2.jpg' %}" alt="Cover" class="img-fluid rounded" style="width:100%; height: 400px; object-fit: cover;">
 </div>
 
 </div> <!-- container //  -->
