Portfolio page and Navbar

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,5 +1,7 @@
 {% load static %}
-
+<div class="w-100 d-flex justify-content-end bg-success" style="padding: 0px 0;">
+    <a href="{% url 'portfolio' %}" class="btn btn-outline-light bg-success" style="margin: 5px; border-color: white; color: white;">Visit My Portfolio</a>
+</div>
 <header class="section-header">
 <nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom">
 <div class="container">
@@ -18,7 +20,6 @@
     </ul>
     <ul class="navbar-nav">
 		<li><a href="#" class="nav-link"> <i class="fa fa-envelope"></i> markojovicic.rs@gmail.com </a></li>
-		<li><a href="#" class="nav-link"> <i class="fa fa-phone"></i> Portfolio </a></li>
 	</ul> <!-- list-inline //  -->
   </div> <!-- navbar-collapse .// -->
 </div> <!-- container //  -->
