--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="w-100 d-flex justify-content-end bg-success" style="padding: 0px 0;">
-    <a href="{% url 'portfolio' %}" class="btn btn-outline-light bg-success" style="margin: 5px; border-color: white; color: white;">Visit My Portfolio</a>
+    <a href="{% url 'portfolio_page' %}" class="btn btn-outline-light bg-success" style="margin: 5px; border-color: white; color: white;">Visit My Portfolio</a>
 </div>
 <header class="section-header">
 <nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom">
