--- a/templates/home.html
+++ b/templates/home.html
@@ -6,14 +6,15 @@
 {% block content %}
 
 <!-- ========================= SECTION MAIN ========================= -->
-<section class="section-intro padding-y-sm">
-<div class="container">
+<!-- ========================= SECTION MAIN ========================= -->
+<section class="section-intro">
+    <div class="container-fluid p-0">
+        <div class="intro-banner-wrap">
+            <img src="{% static 'images/banners/cover2.jpg' %}" alt="Cover" style="width: 100%; height: 450px; object-fit: cover;">
+        </div>
+    </div> <!-- container-fluid // -->
+</section>
 
-<div class="intro-banner-wrap">
-	<img src="{% static 'images/banners/cover2.jpg' %}" alt="Cover" class="img-fluid rounded" style="width:100%; height: 400px; object-fit: cover;">
-</div>
-
-</div> <!-- container //  -->
 </section>
 <!-- ========================= SECTION MAIN END// ========================= -->
 
