--- a/templates/portfolio/portfolio.html
+++ b/templates/portfolio/portfolio.html
@@ -16,13 +16,17 @@
             height: 100vh;
             border: none;
         }
+        #myPDF {
+            width: 100%;
+            height: 100vh;
+        }
     </style>
 </head>
 <body>
-    <object data="{% static 'Marko_Jovicic_Resume.pdf' %}" type="application/pdf">
-        Your browser does not support PDFs. Please download the PDF to view it:
-        <a href="{% static 'Marko_Jovicic_Resume.pdf' %}">Download PDF</a>
-    </object>
+{#    <object data="{% static 'Marko_Jovicic_Resume.pdf' %}" type="application/pdf">#}
+{#        Your browser does not support PDFs. Please download the PDF to view it:#}
+{#        <a href="{% static 'Marko_Jovicic_Resume.pdf' %}">Download PDF</a>#}
+{#    </object>#}
+<iframe id="myPDF" src="{% static 'Marko_Jovicic_Resume.pdf' %}" frameborder="0"></iframe>
 </body>
 </html>
-//TODO Napravi Da je pocetna strana ne vodi ka loginu, onda vidi sta ces
